# proto-os-interview-repo

./: .gitignore  README.md
python-api/: .coveragerc  .env  .env.example  .gitignore  Makefile  README.md  REPO_STRUCTURE.md  main.py  pyproject.toml
python-api/app/: .coveragerc
python-api/app/api/v1/openapi/: router.py
python-api/app/api/v1/users/: routes.py  schemas.py
python-api/app/core/: config.py  logging.py
python-api/app/integrations/google_calendar/: convert_data_to_csv.py  fetch_calendar_api_data.py  main_entry_point.py  parse_calendar_api_data.py  readme.md
python-api/app/integrations/google_calendar/data/: calendar_api_discovery_20250619_175230.csv  calendar_api_discovery_20250619_175230.json
python-api/app/integrations/google_calendar/schemas/: calendar_metadata_schemas.py
python-api/app/integrations/google_calendar/tests/: test_convert_data_to_csv.py  test_fetch_calendar_api_data.py  test_main_entry_point.py  test_parse_calendar_api_data.py
python-api/app/integrations/openrouter/: README.md  client.py  clients.py  factory.py  interfaces.py  llm_providers.py  models.py  schemas.py
python-api/app/integrations/openrouter/tests/: conftest.py  test_client.py  test_factory.py  test_openapi.py  test_services.py
python-api/app/integrations/utils/: parse_json.py  services.py
