[project]
name = "proto-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "loguru>=0.7.3",
    "pytest>=8.0.1",
    "coverage>=7.9.1",
    "flake8>=7.2.0",
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
]
